--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <h3>運営</h3>
 
-<p>主に開催の日程を決めたり、vimrc を探してきたり、当日の進行(と言っても開始と終了の合図をする人たちです。</p>
+<p>主に開催の日程を決めたり、vimrc を探してきたり、当日の進行(と言っても開始と終了の合図をするくらい)をする人たちです。</p>
 
 <ul>
 <li>
