[WIP] bar chart

--- a/playground/index.html
+++ b/playground/index.html
@@ -1,14 +1,5 @@
-<h1>Happy Vimming!</h1>
+<h1>Playground</h1>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script>
-$.ajax({
-  type: 'GET',
-  url: '/reading-vimrc/json/archives.json',
-  dataType: 'json',
-  success: function(json){
-    vimrcs = json;
-    console.log(vimrcs);
-  }
-});
-</script>
+<script src="{{ site.base-url }}javascripts/stat.js"></script>
