Implement line charts of the number of participants

--- a/stat/index.html
+++ b/stat/index.html
@@ -17,6 +17,7 @@ section {
 /* Axis */
 .axis text {
   font: 12px sans-serif;
+  fill: #f8f8f8;
 }
 
 .axis path,
@@ -26,7 +27,10 @@ section {
   shape-rendering: crispEdges;
 }
 
-.x.axis path {
+.line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
 }
 
 </style>
