Import perfect-scrollbars and apply to the stat line chart
- separate <style> into a css file

--- a/stat/index.html
+++ b/stat/index.html
@@ -2,58 +2,16 @@
 layout: default
 title: vimrc読書会 Stat
 ---
-<style>
-/* Overwrite width */
-.wrapper {
-  max-width: 960px;
-}
-#header nav {
-  max-width: 960px;
-}
-section {
-  max-width: 960px;
-}
 
-/* Axis */
-.axis text {
-  font: 12px sans-serif;
-  fill: #f8f8f8;
-}
+<link rel="stylesheet" href="{{ site.base-url }}stylesheets/stat.css">
+<link rel="stylesheet" href="{{ site.base-url }}assets/perfect-scrollbar-0.4.10.min.css">
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #f8f8f8;
-  shape-rendering: crispEdges;
-}
-
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-
-/* tooltip */
-.js-stat-tooltip {
-  position: absolute;
-  z-index: 10;
-  visibility: hidden;
-
-  max-width: 350px;
-  padding: 3px;
-  color: #ffffff;
-  background: #000000;
-  line-height: 30px;
-  text-align: center;
-  border-radius: 6px;
-}
-
-</style>
+<script src="{{ site.base-url }}assets/perfect-scrollbar-0.4.10.with-mousewheel.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="{{ site.base-url }}javascripts/stat.js"></script>
 
 <div id="reading-vimrc-stat">
   <h2>vimrc読書会参加者数</h2>
   <div id="d3-vimrc-participants-stat"></div>
 </div>
 
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="{{ site.base-url }}javascripts/stat.js"></script>
