Implement the github streak graph imitation

--- a/stat/user.html
+++ b/stat/user.html
@@ -9,8 +9,13 @@
     <dt>最後の参加</dt> <dd> <a href='[[last.archive_url]]'>第[[ last.id ]]回 [[last.author.name]] [[last.date]]</a></dd>
     <dt>Current streak</dt> <dd>[[ current_streak ]] 回</dd>
     <dt>Longest streak</dt> <dd>[[ longest_streak ]] 回</dd>
+
+    <dt>Participations</dt>
+    <dd id='d3-participation-streak-graph'>
+    </dd>
   </dl>
 </div>
+
 
 <h3>参加してない読書会</h3>
 
