use site.github.url instead of site.base-url

--- a/playground/index.html
+++ b/playground/index.html
@@ -1,5 +1,9 @@
+---
+layout: default
+---
+
 <h1>Playground</h1>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="{{ site.base-url }}javascripts/stat.js"></script>
+<script src="{{ site.github.url }}/javascripts/stat.js"></script>
