fix more mixed contents

--- a/playground/index.html
+++ b/playground/index.html
@@ -6,4 +6,4 @@ layout: default
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="{{ site.github.url }}/javascripts/stat.js"></script>
+<script src="{{ site.github.url | replace: 'http://', '//' }}/javascripts/stat.js"></script>
