--- a/stat/user.html
+++ b/stat/user.html
@@ -68,4 +68,4 @@
 </tbody>
 </table>
 
-<a href='' ng-href='/reading-vimrc/stat/'>全体のStatに戻る</a>
+<a href='' ng-href='{{ site.baseurl }}/stat/'>全体のStatに戻る</a>
